Fixed footer not showing issue

--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ img.bg {
 }
 
 footer {
+    position: relative;
     margin: auto;
     width: 800px;
 }
